# ConanReseach

./: README.md
conan-v1/: Makefile  test.cpp
conan-v1/conanfiles_build/: conanfile.py
conan-v2/: CMakeLists.txt  Makefile  test.cpp
conan-v2/conanfiles_build/: README.md  conandata.yml  conanfile.py
conan-v3/: CMakeLists.txt  README.md  conanfile.py  test.cpp
conan-v3/conanfiles_build/: Quaternion.patch  conanfile.py
conan-v4/: Makefile  README.md  test.cpp
conan-v4/conanfiles_build/: conandata.yml  conanfile.py
